--- a/public/stats.ejs
+++ b/public/stats.ejs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <script src="/js/menu.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap_old.min.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/style_for_menu.css">
+    <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Меню | Cherry Music Bar</title>
+    <title>Аналитика продаж | Cherry Music Bar</title>
 </head>
 <style>
     .well {
@@ -35,6 +37,7 @@
 }
 </style>
 <body id="">
+    <%- include('upmenu_crm') %>
     <script type="text/javascript">
         function show_history() {
             const sel=document.getElementsByName('postav')[0]
@@ -141,13 +144,11 @@
             </select>&nbsp;&nbsp;<select style="width:100;" name="tf_y"><option value="2011">2011</option><option value="2012">2012</option><option value="2013">2013</option><option value="2014">2014</option><option value="2015">2015</option><option value="2016">2016</option><option value="2017">2017</option><option value="2018">2018</option><option value="2019">2019</option><option value="2020">2020</option><option value="2021">2021</option><option value="2022">2022</option><option value="2023">2023</option><option value="2024" selected="">2024</option><option value="2025">2025</option><option value="2026">2026</option><option value="2027">2027</option><option value="2028">2028</option><option value="2029">2029</option><option value="2030">2030</option>
             </select>&nbsp;&nbsp;часы:<select style="width:70;" name="tf_hour"><option value="0">00</option><option value="1">01</option><option value="2">02</option><option value="3">03</option><option value="4">04</option><option value="5">05</option><option value="6">06</option><option value="7">07</option><option value="8" selected="">08</option><option value="9">09</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option><option value="21">21</option><option value="22">22</option><option value="23">23</option></select> 
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="checkOrderHistory" id="flexRadioDefault1">
+                <input class="" type="radio" name="checkOrderHistory" id="flexRadioDefault1">
                 <label class="form-check-label" for="checkOrderHistory">
                   Просмотреть историю счетов
                 </label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="checkDishHistory" id="flexRadioDefault2">
+                <input class="" type="radio" name="checkDishHistory" id="flexRadioDefault2">
                 <label class="form-check-label" for="checkDishHistory">
                   Просмотреть историю продажи блюд
                 </label>
