--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -1,10 +1,16 @@
 <div class="upMenu navbar navbar-static-top" style="width: 100%;">
     <div class="navbar-inner">
               <div class="btn-group  pull-left">
-                    <a class="btn btn-success" href="/admin/tables"><i class="icon-shopping-cart icon-white"></i> Продажа</a>
-            
-          <a class="btn btn-success" href="index.php" title="На главную">&nbsp;<i alt="На главную" class="icon-home icon-white"></i>&nbsp;</a>
-                  <a title="Выйти" href="index.php?class_name=users&amp;act=logout" class="btn btn-danger">&nbsp;<i alt="Выйти" class="icon-remove icon-white"></i>&nbsp;</a>		</div>
+                    <a class="btn btn-success" href="/admin/tables">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                        </svg>
+                        Продажа
+                    </a>
+                  <a title="Выйти" href="index.php?class_name=users&amp;act=logout" class="btn btn-danger">&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+                    <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                  </svg>&nbsp;</a>		</div>
                   <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                     <ul class="nav">
                         <li>
@@ -36,7 +42,7 @@
                                 Работа с клиентом
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=uchet&amp;act=take_table" title="Обслуживание столиков">Обслуживание столиков</a></li>
+                                <li><a class="dropdown-item" tabindex="-1" href="/admin/tables" title="Обслуживание столиков">Обслуживание столиков</a></li>
                         
                                 <li><a class="dropdown-item" tabindex="-1" href="index.php?class_name=clients&amp;act=view_clients" title="Все клиенты">Все клиенты</a></li>
                             
