--- a/public/nomenclature.ejs
+++ b/public/nomenclature.ejs
@@ -96,7 +96,7 @@ body {
                 <tr>
                     <td class="td_left" onclick="" style="width: 20vw;">
                         <div>
-                            <a class="btn btn-success" onclick=""><i class="icon-plus icon-white"></i> Добавить категорию</a>
+                            <a href="/admin/nomenclature/edit_subcategory?new=true&type=<%=type%>" class="btn btn-success" onclick=""><i class="icon-plus icon-white"></i> Добавить категорию</a>
                             <div class="pull-right" style="widht:200px;">
                                <label for="hid_cat_id"><input type="checkbox" onchange="" id="hid_cat_id" name="hid_cat_id">Показать скрытые категории
                                </label>
@@ -113,6 +113,23 @@ body {
                                         <br>
                                         <br>
                                         <font style="font-size:14px; font-weight:bold; margin-left: 20px;"></font><%= subcategory.subcategory_name %></font>
+                                    </td>
+                                    <td class="td_btn">
+                                        <button onclick="showSubcategory(<%= subcategory.id %>)" class="btn btn-info" onclick="recepturaBlu_draw_tov_list(&quot;&quot;, 1159)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-archive" viewBox="0 0 16 16">
+                                                <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5zm13-3H1v2h14zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/>
+                                            </svg>
+                                        </button>
+                                    </td>
+                                    <td class="td_btn">
+                                        <a href="/admin/nomenclature/edit_subcategory?id=<%= subcategory.id %>&type=<%=type%>" class="btn btn-success" onclick="recepturaBlu_edit_cat(1159)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                                                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                                            </svg>
+                                        </a>
+                                    </td>
+                                    <td class="td_btn">
+                                        <a href="/admin/nomenclature/delete_subcategory?id=<%= subcategory.id %>&type=<%= type %>" class="btn btn-danger">X&nbsp;</a>
                                     </td>
                                 </tr>
                             <% }); %>
